[project]
name = "cynetdiff"
version = "0.1.18" # TODO switch to dynamic versioning
description = "A fast network diffusion library"
authors = [{ name = "Eliot W. Robson", email = "eliot.robson24@gmail.com" }]
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
readme = "README.md"
maintainers = [
    { name = "Eliot W. Robson", email = "eliot.robson24@gmail.com" },
    { name = "Abhishek K. Umrawal", email = "aumrawal@illinois.edu" },
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Intended Audience :: Science/Research",
]

[project.urls]
homepage = "https://github.com/eliotwrobson/CyNetDiff"
tracker = "https://github.com/eliotwrobson/CyNetDiff/issues"
documentation = "https://eliotwrobson.github.io/CyNetDiff/"

[dependency-groups]
build = [
    "setuptools",
    "meson-python>=0.18.0",
    "ninja>=1.8.2",
    "cython",
    "numpy~=2.0.0",
    "cibuildwheel>=2.0.0",
    "pythran",
    "pybind11",
]
test = [
    "pytest",
    "ndlib~=5.1.1",
    "networkx~=3.2.1",
    "numpy~=2.0.0",
    "pytest-benchmark~=5.1.0",
]
lint = [
    "mypy~=1.7.1",
    "networkx~=3.2.1",
    "numpy~=2.0.0",
    "ruff~=0.11.13",
    "pandas-stubs~=2.2.0.240218",
    "types-tqdm~=4.66.0.20240106",
    "cython-lint~=0.16.2",
    "pytest~=8.3.4",
    "coloraide~=3.1.2",
]
docs = [
    "mkdocs~=1.4.2",
    "mkdocs-material~=9.1.9",
    "mkdocs-macros-plugin~=0.7.0",
    "mkdocstrings~=0.23.0",
    "mkdocstrings-python~=1.7.3",
    "setuptools~=69.0.3",
]

[tool.pdm.options]
install = ["--no-isolation"]

[build-system]
build-backend = "mesonpy"
requires = ["meson-python>=0.18.0", "cython", "numpy~=2.0.0", "ninja>=1.8.2"]

[tool.cibuildwheel]
build = "cp310-* cp311-* cp312-* cp313-*"
build-frontend = "build[uv]"
test-requires = "pytest networkx numpy"
test-command = "pytest {project}/tests"

### Start of static analyis tools ###

[tool.mypy]
python_version = "3.13"

[[tool.mypy.overrides]]
module = ["networkx.*", "Cython.*", "ndlib.*", "pooch.*", "matplotlib.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = "tests"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # flake8-bugbear
    "B",
    # isort
    "I",
    # pep8-naming
    "N",
]

[tool.cython-lint]
max-line-length = 120
